# SeetaFaceEngine

./: CMakeLists.txt
FaceAlignment/: CMakeLists.txt
FaceAlignment/src/test/: test_face_alignment.cpp
FaceDetection/: CMakeLists.txt
FaceDetection/src/test/: test_face_detection.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/src/: CMakeLists.txt
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
SFMFCTest/: CMakeLists.txt
SFMFCTest/include/: SFMFCTest.h  SFMFCTestDlg.h
SFMFCTest/res/: SFMFCTest.rc  resource.h
SFMFCTest/src/: SFMFCTest.cpp  SFMFCTestDlg.cpp  stdafx.cpp
cmake/: ALL_BUILD.vcxproj.user.in  test_face_detection.vcxproj.user.in
python/: setup.py  test_opencv.py  test_pillow.py
python/pyseeta/: aligner.py  config.py  detector.py  identifier.py
